# mlp-obligatorio

./: .gitignore  README.md  constants.py  pyproject.toml
core/: constants.py  predictor.py
deployment/: README.md  constants.py  main.py  pyproject.toml
deployment/services/: prediction.py
deployment/static/: index.html
dev/: README.md
model-building/: README.md  food_inflation_model.ipynb  metrics.json
model-building/utils/: data.py  metrics.py  plots.py  quality_gate.py  registry.py  training.py
monitoring/: README.md  analyze.py  logger.py
monitoring/logs/: predictions.jsonl
prod/: README.md
