[tool.poetry]
name = "food-inflation-predictor"
version = "0.1.0"
description = "Predictor de inflación en alimentos"
authors = []
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "*"
uvicorn = {extras = ["standard"], version = "*"}
pydantic = "*"
numpy = "*"
pandas = "*"
matplotlib = "*"
scikit-learn = "*"
joblib = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=7.2.0,<8.0.0)"
]
