[tool.poetry]
name = "food-inflation-predictor"
version = "0.1.0"
description = "Predictor de inflación en alimentos"
authors = []
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.13.5"
fastapi = "*"
uvicorn = {extras = ["standard"], version = "*"}
pydantic = "*"
numpy = "2.2.6"
pandas = "2.3.3"
matplotlib = "3.10.6"
scikit-learn = "1.7.2"
joblib = "1.5.2"
wandb = "0.22.1"
nbformat = "5.10.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=7.2.0,<8.0.0)"
]
